Correction de l'alignement des images

--- a/css/default.css
+++ b/css/default.css
@@ -1433,6 +1433,9 @@ li:empty {
     position:relative;
     margin: 2px;
 }
+.event .imgResultGrp {
+    position:static;
+}
 
 .imgResult {
     width:130px;
@@ -1442,7 +1445,7 @@ li:empty {
 
 .imgResultHover {
   position: absolute;
-  top: -120px;
+  top: -50px;
   left:0;
   background-color: #99ACB0;
   border-radius: 5px;
@@ -1465,6 +1468,7 @@ li:empty {
     border-radius: 5px;
     min-height:130px;
 }
+
 .imgResultGrp:hover .imgResultHover img{
     min-height:80px;
 }
@@ -1474,7 +1478,7 @@ li:empty {
     height: auto;
     padding:5px;
     left: -45px;
-    top: -150px;
+    top: -80px;
     z-index:20;
     opacity:1;
     border: thin solid #BBBBBB;
